Fixed contents overflowing from their panes; Added a custom jQuery UI min for animation ease;

--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,8 @@ html, body, #content, .page {
 }
 
 .page {
+	position: relative;
+	overflow: hidden;
 	width: 100%;
 	height: 100vh;
 	background-size: cover;
@@ -155,7 +157,7 @@ header #navbar ul li a {
 .page#ourServices ul {
 	float: left;
 	position: absolute;
-	top: 120vh;
+	top: 20vh;
 	left: 15vw;
 }
 .page#ourServices ul li {
@@ -177,7 +179,7 @@ header #navbar ul li a {
 	font-size: 35pt;
 	text-transform: capitalize;
 	position: absolute;
-	top: 125vh;
+	top: 25vh;
 	left: 41vw;
 	z-index: 1;
 }
@@ -188,14 +190,14 @@ header #navbar ul li a {
 	font-size: 17pt;
 	color: rgba(76, 76, 76, 1.00);
 	position: absolute;
-	top: 145vh;
+	top: 45vh;
 	left: 41vw;
 	z-index: 1;
 }
 
 .page#ourServices img {
 	position: absolute;
-    top: 150vh;
+    top: 50vh;
     right: 0vw;
 	width: 25vw;
 	height: auto;
